XCS for realData with label (0,1)

--- a/XCS.csproj
+++ b/XCS.csproj
@@ -91,6 +91,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActionSet.cs" />
+    <Compile Include="EpsilonGreedyPredictionArray.cs" />
     <Compile Include="IntergralState.cs" />
     <Compile Include="BinaryState.cs" />
     <Compile Include="Classifier.cs" />
